<resources>
    <string name="app_name">Your Tags</string>
    <string name="title_tags">Tags</string>
    <string name="title_custom">Custom</string>
    <string name="title_apps">Apps</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="mainActivity">ca-app-pub-1828706743315425/8611147644</string>
    <string name="tagsFragment">ca-app-pub-1828706743315425/9108226697</string>
    <string name="customFragment">ca-app-pub-1828706743315425/3807674846</string>
    <string name="appsFragment">ca-app-pub-1828706743315425/5092836351</string>
    <string name="popular1">•\n•\n•\n🆙#popular #popularpic #popularphoto #popularpage #popularnow #popularmagazine #populartv #popularworld #populardancetrends #popularwoodworking #populardemand #populartagsapp #popularity #popularitem #popularangels #popularink #populares #populars #populartags #popularplaces #popularmusic #popularart #popularculture #popularmagazineindonesia #populargram #popularsong #popularmemes #popularpages #populargirls #popularmmos</string>
    <string name="popular2">•\n•\n•\n🆙#popularitycontest #popularmansion #popularjewelry #popularpicture #popularbooks #populardance #popularmeme #popularstranger #populartrends #populardancetrend #popularphotography #popularfaces #popularthemes #popularpays #popularpictures #populartagsvideo #popularquotes #popularcommunitybank #popularchoice #popularpocket #popularAcaseearphoneStand #popularplace #popularnails #popularcake #popularjkt #popularfootwear #populartattoo #popularinstagram #popularyoutuber #populartagapp</string>
    <string name="popular3">•\n•\n•\n🆙#top #toptags #topmodel #topshop #topliketags #topeuropephoto #tops #topbodychallenge #topshelflife #toprankrepost #topshelf #topless #topdogphoto #top40 #topcatphoto #topi #topvsco #topparisphoto #topmodels #topuz #topman #top10 #toptan #topbodychallengeuse #topgear #topyacht #topfrancephoto #topofbrazil #toplondonphoto #topspeed</string>
    <string name="popularrandom">•\n•\n•\n🆙#popular #popularonlinedatingsites #popularnobodytools #popularipic #populardointer #populartrends #popularbajaj #popularkidz #popularbooks #popularanime #populardemandradioshow #popularwoodworking #populardance #populardenature #popularart #populararts #popularpittsburgh #popularic #popularink #popularmmos #populardancetrend #popularmmosandgamingwithjen #popularpics #populartv #popularresidence #popularsovereignty #popularaesthetic #popularneddlepillow #popularnails #popularcheerleaders</string>
    <string name="popularlive">•\n•\n•\n🆙#popular #korean #views #spam #rainbow #lol #slimepressing #oddlysatisfyingslime #hashtags #slimeamerica #koreanslime #makeup #satisfyingcrunch #crunch #asmrwhispering #asmreating #asmrslimesounds #slimerepost #repost #sound #hot #sexy #girl #chicashot #chicassexys #chicaselfie #chicascalientes #booty #guapas #rubias</string>
    <string name="like1">•\n•\n•\n👍🏻#like4like #likeforlike #like #likes #likeforfollow #likesforlikes #like4follow #likes4likes #likeback #likeme #likeforlikes #like4likes #liker #likeit #likebackteam #likeall #likers #likealways #liketkit #liketeam #likeforlikealways #likeforlikeback #likesreturned #likeforfollowers #like4likeback #likesforfollow #likeforme #likethis #likebackalways #likeaboss</string>
    <string name="like2">•\n•\n•\n👍🏻#likeforspam #likefortag #liketolike #likeforfollowback #likesme #likeforlife #likexlike #likes4follow #like20like #like4 #likemeplease #likemeback #likeforfun #likee #likeus #like4spam #likefollow #like4ike #liketrain #likeforalways #likeforlive #liketoknowit #likefor #likess #like4comment #likeandfollow #likesfortags #like4shoutout #likeforlove #likestagram</string>
    <string name="like3">•\n•\n•\n👍🏻#like2like #likeforcomments #likeforshare #liketime #likeforfollower #likefatherlikeson #likeforlikeandfollow #likenow #likethispic #like4liker #likemotherlikedaughter #likes4followers #like4l #likefourlike #likeforashoutout #likesforspam #likelove #likesforlikesback #likeforelike #likeformore #likemike #likeinstagram #likemenow #likeyou #likethisphoto #likemurah #like4lik #likepic #likesforfollowers #likebackinstantly</string>
    <string name="bestart">•\n•\n•\n🎨#art #artist #artwork #arte #artoftheday #artistic #artsy #artofvisuals #artistsoninstagram #arts #artgallery #artists #artistsofinstagram #artlife #artlovers #artstagram #artista #artisan #artistoninstagram #artworks #artshow #artcollector #artforsale #artshub #artlover #artofinstagram #artphotography #artstudio #artcollective #artdeco</string>
    <string name="art1">•\n•\n•\n🎨#artistlife #artesanato #artesanal #artfido #artphoto #artoninstagram #arty #artgram #artiste #arttherapy #artdirection #artbasel #artistofinstagram #artsanity #artbook #artis #artnerd #article #artsandcrafts #artworld #artdaily #artistry #artnews #artdirector #artdesign #arthistory #artislife #artfair #artexhibition #artes</string>
    <string name="art2">•\n•\n•\n🎨#artjournal #artpop #artmuseum #artecontemporanea #artofvisual #artstudent #artprint #artificialintelligence #artmagazine #artistas #artcollectors #arteurbano #artcontemporain #artschool #artporn #artnouveau #artesania #artedigital #artcollection #artlove #artshare #arthritis #artisanal #artvideo #artigianato #artofdrawingg #artcurator #artnude #artblog #artclass</string>
    <string name="art3">•\n•\n•\n🎨#artiststudio #artsyfartsy #artprints #artinfo #artdealer #artdoll #artph #artanddesign #artinstallation #artproject #artstation #artesuave #artistsofig #artisans #artisanjewelry #arteurbana #artshelp #artisanat #artoftype #artmodel #artstyle #artchallenge #artjewelry #artsxdesign #artisindonesia #artgalleries #arttoy #arteemfoco #artvin #artblogger</string>
    <string name="building1">•\n•\n•\n🏛#building #buildings #buildingporn #buildinganempire #buildingdesign #buildingmyempire #buildingmuscle #buildinglover #buildingsandmore #buildingphotography #buildinglovers #buildinggraffiti #buildingdreams #buildingabrand #buildingsite #buildingblocks #buildingmuscles #buildingwealth #buildingmybrand #buildingthebrand #buildingrelationships #buildingbrands #buildingart #buildingmaterials #buildingstylesgf #buildingconfidence #buildingwork #buildingmaterial #buildingstyles #buildingcommunity</string>
    <string name="building2">•\n•\n•\n🏛#buildingbridges #buildingbusiness #buildingalegacy #buildingstrength #buildingempires #buildingblock #buildingabetterme #buildingamerica #buildingmemories #buildingyourbrand #buildingbossladies #buildingchampions #buildingleaders #buildingbody #buildingastrongerbrotherhood #buildingahouse #buildingswow #buildinghomes #buildingabrewery #buildingahome #buildingthedream #buildingourempire #buildingbusinesses #buildingtrust #buildingproject #buildingtoys #buildingastrongerworld #buildingthefuture #buildingseason #buildingabusiness</string>
    <string name="mosque">•\n•\n•\n🕌#mosque #mosques #mosquee #mosquera #mosquesofworld #mosquesoftheworld #mosquecarpet #mosquehassan2 #mosqueton #mosquedome #mosquetas #mosqueta #mosqueroles #mosqueracundinamarca #mosquexlove #mosquetraveler #mosqueofcordoba #mosquet #mosquerateatral #mosqueintheworld #mosquehistory #mosqueroad #mosquefinder #mosquechengho #mosquettoschoenen #mosqueiro #mosqueamribnalas #mosquephotography #mosqueseries #mosquezayed</string>
    <string name="makkah">•\n•\n•\n🕋#makkah #makkahalmukarramah #makkahx #makkahalmukaramah #makkahmadeenah #makkahmadinah #makkahmasjid #makkahgifts #makkahclockroyaltower #makkahclock #makkahmcz #makkahmillennium #makkahmunawwarah #makkahvsmakkah #makkahalmukarrahmah</string>
    <string name="church">•\n•\n•\n⛪️#church #churchflow #churches #churchill #churchapparel #churchwedding #churchmemes #churchgirl #churchs #churchlife #churchtime #churchstreet #churchfamily #churchfashion #churchplant #churchyard #churchplanting #churchmusic #churchday #churchgate #churchofchrist #churchclothes #churchesofinstagram #churcharchitecture #churchleaders #churchoutfit #churchvibes #churching #churchtees #churchmedia</string>
    <string name="dubai">•\n•\n•\n🇦🇪#dubai #dubailife #dubaimall #dubaifashion #dubaimarina #dubaiblogger #dubaistyle #dubaitag #dubaifood #dubailifestyle #dubaifitness #dubaishopping #dubainight #dubaievents #dubai30x30 #dubaibloggers #dubaifashionblogger #dubaiphotographer #dubaicars #dubaicity #dubaiwedding #dubainightlife #dubaiinstagram #dubaifoodie #dubaistreetstyle #dubaifitnesschallenge #dubaiart #dubaimodel #dubaifitfam #dubaigirl</string>
    <string name="africa">•\n•\n•\n👳🏿‍♀#africa #african #africanfashion #africanamerican #africanprint #africanbeauty #africanqueen #africans #africanart #africanstyle #africangirlskillingit #africanmusic #africangirl #africanamazing #africaninspired #africanwoman #africanfood #africansafari #africanwomen #africansweetheartweddings #africangrey #africanculture #africanmodel #africandance #africanwildlife #africanprints #africanpride #africanfabric #africanwedding #africanblogger</string>
    <string name="rusia">•\n•\n•\n🇷🇺#russia #russiangirl #russian #russiangirls #russianblue #russia2018 #russianboy #russianvolume #russianmodel #russianwomen #russianhair #russiansingers #russiandesigner #russiagirl #russianart #russianvolumelashes #russianbeauty #russianstyle #russianarmy #russianfood #russiannature #russiaphoto #russianlashes #russianroulette #russianbluecat #russianwoman #russiancosplay #russians #russianfederation #russiaculture</string>
    <string name="feeling">•\n•\n•\n🤩#feeling #feeling #feelinggood #feelingmyself #feelingood #feelingblessed #feelinggreat #feelingcrafty #feelingpretty #feelingloved #feelinghappy #feelingbetter #feelingbeautiful #feelingfestive #feelingfresh #feelingsexy #feelingit #feelinginspired #feelingstrong #feelingblue #feelinglucky #feelingfree #feelingawesome #feelingalive #feelingthelove #feelingcute #feelinggrateful #feelingdown #feelingproud #feelingamazing</string>
    <string name="tired">•\n•\n•\n😴#bed #moon #broken #beds #afterparty #beautiful #star #tired #exhausted #inthemood #donotwant #nightynight #feel #goodnight #kisses #blanket #gn #warm #love #alcohol #dark #right #partylightsout #stars #postworkout #night #photooftheday #instagooddeepsleep #drained #sleeptime</string>
    <string name="happy">•\n•\n•\n😆#haha #instahappy #happier #laugh #fun #laughing #goodday #happyday #excited #funny #love #smile #joy #feliz #happy #20likes #feel #happydays #goodmood #feelgood #funtimes #lovelife #instagood #bestday #sohappy #humor #smiling #feelgoodphoto #enjoy #happyhappy</string>
    <string name="sad">•\n•\n•\n😞#tears #sadness #hope #lifesucks #depressed #l4l #upset #hate #stressed #bored #crying #boring #annoyed #insta #cheermeup #help #instasad #cry #nothappy #me #sadday #sad #nolove #feel #boringday #mood #moods #goingmental #sadmood #badmood</string>
    <string name="funny">•\n•\n•\n😂#friend #instafun #laughing #witty #instagood #joke #fun #laugh #crazy #funny #humor #silly #photooftheday #friends #hilarious #feel #smiling #funnypictures #smile #tweegram #lmfao #goodday #instahappy #lol #lmao #joking #jokes #epic #haha #wacky</string>
    <string name="memories">•\n•\n•\n🤗#old #photooftheday #instatbt #instamemory #anothertbt #instalike #romance #throwbackthursdayy #best #instatb #reminiscing #backintheday #latetbt #tb #tbts #tbt #reminisce #throwbackthursdayyy #throwbackthursdays #back #memories #life #instamoment #instagood #throwbackthursday #throwback #cute #miss #memory #memorybox</string>
    <string name="quotes">•\n•\n•\n😎#goodvibes #quote #instadaily #tbt #instagood #love #comment #word #comments #life #folkvibe #song #funny #tweegram #nofilter #littlestoriesofmylife #instagramhub #thehappynow #quotes #true #quoteoftheday #feel #peoplescreatives #photooftheday #inspiremyinstagram #inspire #positivethinking ##quotesoftheday #quotestagram #quotestoliveby</string>
</resources>